fix scaling on mobile

--- a/style.css
+++ b/style.css
@@ -20,3 +20,8 @@ footer{text-align: center;}
 a:link{color: #00DD00;}
 a:visited{color: #CC9900;}
 a:hover{color: #FFFFFF;}
+@media screen and (max-width: 480px){
+	img{width: 100%}
+	body{width: 95%}
+}
+
